--- a/source/scss/organisms/footers/_shield-footer.scss
+++ b/source/scss/organisms/footers/_shield-footer.scss
@@ -20,6 +20,6 @@
         h3 {
             font-size: 1.2em;
         }
-        background-image: url("../../images/backgrounds/images/shieldbg.png");
+        background-image: url("../images/backgrounds/images/shieldbg.png");
         background-size: cover;
     }
