--- a/source/scss/molecules/buttons/_rounded-image-button.scss
+++ b/source/scss/molecules/buttons/_rounded-image-button.scss
@@ -11,7 +11,7 @@
     background-position: left 80%;
     //margin-bottom: 1em;
     width: 100%;
-    max-width: 500px;
+    //max-width: 500px;
     padding: 60px 15px;
     display: inline-block;
     text-shadow: 0 2px 5px #444;
@@ -20,11 +20,16 @@
     font-size: 1.5em;
     text-align: center;
     border-radius: 15px;
+    margin: 1em 0;
+}
+
+.rounded-image-button:before{
+  border-radius: 15px;
 }
 
 .rounded-image-button--label {
     color: #fff;
-    padding: 0.5em;
+  //  padding: 0.5em;
     width: 100%;
     text-align: center;
     -webkit-transition: all 0.1s;
@@ -35,7 +40,7 @@
     cursor: pointer;
     position: relative;
     @include breakpoint($screen-md) {
-        margin: 22px;
+        //margin: 22px;
         font-size: 1.5em;
     }
 }
