--- a/source/scss/global/_themes.scss
+++ b/source/scss/global/_themes.scss
@@ -10,7 +10,7 @@
     }
 }
 
-.light-theme
+.light-theme .section-themeable
 {
     color: #fff;
 
@@ -32,7 +32,7 @@
     }
 }
 
-.dark-theme {
+.dark-theme .section-themeable {
     h1, h2, h3, h4, h5, h6, p, a, div, span {
         color: #333;
     }
