--- a/source/scss/molecules/_molecules-base.scss
+++ b/source/scss/molecules/_molecules-base.scss
@@ -19,6 +19,7 @@
 @import "cards/slideout-panel";
 @import "cards/stat-card";
 @import "cards/tiles";
+@import "cards/star-heading";
 @import "cards/whatsComingUp";
 
 
