fixed errors with PL generation!

--- a/source/_patterns/02-organisms/04-tabs/arrow-tab.mustache
+++ b/source/_patterns/02-organisms/04-tabs/arrow-tab.mustache
@@ -2,7 +2,7 @@
     <div class="nav-tabs-wrapper">
         <ul class="nav nav-tabs" data-tabs="tabs">
             {{# listItems.four }}
-            <li><a href="#arrow-tab-{{index}}" data-toggle="tab">{{.}} {{index}} - {{headline.short}}</a></li>
+            <li><a href="#arrow-tab-{{index}}" data-toggle="tab">{{index}} - {{headline.short}}</a></li>
             {{/ listItems.four }}
         </ul>
         <div class="tab-content">
