--- a/source/src_scss/atoms/_base.scss
+++ b/source/src_scss/atoms/_base.scss
@@ -39,6 +39,7 @@
 //@import "lists/inline-list";
 @import "lists/ordered";
 @import "lists/unordered";
+@import "lists/tabs";
 
 @import "tables/tables";
 @import "tables/simple-two-col-table";
