--- a/source/_patterns/04-pages/Orientation-2016.mustache
+++ b/source/_patterns/04-pages/Orientation-2016.mustache
@@ -36,8 +36,8 @@
                 <section class="tiles">
                     <article class="style1 panelSOLAR-btn">
                         <span class="image">
-          <img src="https://images.unsplash.com/photo-1421757295538-9c80958e75b0?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=fde32d6086e1a183c97773d93055ef49" alt="" />
-        </span>
+                          <img src="https://images.unsplash.com/photo-1421757295538-9c80958e75b0?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=fde32d6086e1a183c97773d93055ef49" alt="" />
+                        </span>
                         <a href="#">
                             <h2>SOLAR</h2>
                             <div class="content">
@@ -47,8 +47,8 @@
                     </article>
                     <article class="style1 panelNetID-btn">
                         <span class="image">
-          <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=d172e9f03d0455ffa72c0ac6a30727e8" alt="" />
-        </span>
+                          <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=d172e9f03d0455ffa72c0ac6a30727e8" alt="" />
+                        </span>
                         <a href="#">
                             <h2>NETID</h2>
                             <div class="content">
@@ -58,8 +58,8 @@
                     </article>
                     <article class="style1 panelWiFi-btn">
                         <span class="image">
-          <img src="https://images.unsplash.com/photo-1457305237443-44c3d5a30b89?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=9e32b9efa6049faeca9dca63ba1c6e8e" alt="" />
-        </span>
+                          <img src="https://images.unsplash.com/photo-1457305237443-44c3d5a30b89?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=9e32b9efa6049faeca9dca63ba1c6e8e" alt="" />
+                        </span>
                         <a href="#">
                             <h2>WiFi</h2>
                             <div class="content">
@@ -244,7 +244,7 @@
 
         <div class="slideout-panel-container">
             <div class="slideout-panel-content">
-                <h2>What is SOLAR?</h2>
+                <h2 class="section-title">What is SOLAR?</h2>
             </div>
             <!-- slideout-panel-content -->
         </div>
