Refactored the cards to follow pattern lab best practices

--- a/source/_patterns/01-molecules/03-content-blocks/2100-social-links.mustache
+++ b/source/_patterns/01-molecules/03-content-blocks/2100-social-links.mustache
@@ -1,11 +1,11 @@
-<div class="social-links">
-    <h3 class="white">Connect with @SBUDoIT</h3>
-    
-	
+<div class="social-links center">
+    <h3>Connect with @SBUDoIT</h3>
+
+
         <a href="#" class="social-link social-link--facebook">
             <span class="sr-only">Facebook</span>
         </a>
-    
+
         <a href="#" class="social-link social-link--twitter">
          	<span class="sr-only">Twitter</span>
         </a>
@@ -27,5 +27,3 @@
         </a>
     </p>
 </div>
-
-
