--- a/source/_patterns/01-molecules/cards/_3500-polaroid-card.mustache
+++ b/source/_patterns/01-molecules/cards/_3500-polaroid-card.mustache
@@ -1,8 +1,8 @@
-<div href="#" class="polaroid-card">
+<div data-match-height="polaroid-card" href="#" class="polaroid-card">
 <img class="polaroid-card--image" src="{{img.landscape-16x9.src}}" />
 	<h2 class="polaroid-card--heading">{{headline.short}}</h2>
 	<div class="polaroid-card--text">{{excerpt.short}}</div>
-	
+
 
 	{{# cta }}
     <div class="polaroid-card--cta">
