--- a/source/_patterns/03-templates/00-homepage.mustache
+++ b/source/_patterns/03-templates/00-homepage.mustache
@@ -64,6 +64,6 @@
 	<!--End role=main-->
 	<footer class="site-footer">
 	{{> organisms-shield-footer }}
-	{{> organisms-footer }}
+	{{> organisms-bottom-footer }}
 	</footer>
 </div>
