--- a/source/_patterns/01-molecules/cards/_1000-simple-blurb.mustache
+++ b/source/_patterns/01-molecules/cards/_1000-simple-blurb.mustache
@@ -1,35 +1,36 @@
 <div class="simple-blurb-card" data-match-height="simple-blurb-card">
-   
 
-    {{# iframe.src }}  
-    <div class="simple-blurb-card--video-container">  
+
+
+
+
+    {{# showicon }}
+    <span class="simple-blurb-card--icon {{icon}}"></span><br />
+    {{/ showicon }}
+
+    {{# showiframe }}
+    <div class="simple-blurb-card--video-container">
         <iframe class="simple-blurb-card--video" src="{{iframe.src}}" allowfullscreen /></iframe>
     </div>
-    {{/ iframe.src }}
+    {{/ showiframe }}
 
-
-    {{# icon }}
-    <span class="simple-blurb-card--icon {{icon}}"></span>
-    {{/ icon }}
-
-
-    {{# img}}
+    {{# showimg }}
     <img class="simple-blurb-card--image" src="{{img.landscape-16x9.src}}" />
-    {{/ img }}
+    {{/ showimg }}
 
-    
+
 
     <h2 class="simple-blurb-card--heading">{{ headline.medium }}</h2>
-    
+
 	{{# headline.short }}
     <h3 class="simple-blurb-card--subheading">{{ headline.short }}</h3>
     {{/ headline.short }}
 
     <div class="simple-blurb-card--text">
-        {{{paragraph.double}}}
+        {{{paragraph.medium}}}
     </div>
 
-    
+
     {{# cta }}
     <div class="simple-blurb-card--cta">
         <a href="{{cta.url}}" class="{{cta.class}}">{{cta.text}}</a>
