--- a/source/_patterns/01-molecules/cards/_5000-event-card.mustache
+++ b/source/_patterns/01-molecules/cards/_5000-event-card.mustache
@@ -1,28 +1,30 @@
 <div class="event-card" data-match-height="event-card">
   <div class="bg-pom" data-match-height="event-card--heading-wrap">
     <h2 class="event-card--heading">
-    <a class="event-card--heading-link" href="{{url}}">Beginner Photoshop - Create &amp; Edit Your Images</a>
+    <a class="event-card--heading-link" href="{{url}}">{{headline.short}}</a>
     </h2>
-    
+
   </div>
   <div class="event-card--content" data-match-height="event-card--content">
     <div class="event-card--date-time">
-      November 3rd, 2015 4:30 pm
+      {{month.long}} {{day.short}}{{day.ordinal}}, {{year.long}} {{hour.short}}:{{minute.long}} {{hour.ampm }}
     </div>
+    {{# location }}
     <div class="event-card--map">
-      <a href="{{url}}">{{location}} Melville Library PC Classroom C1640 B</a>                    
+      <a href="{{url}}">{{location}}</a>
     </div>
+    {{/ location }}
+    {{# audience }}
     <div class="event-card--audience">
-            Clubs, Faculty, Guests, Researchers, Staff, Students, Teaching Assistants (TA's)          
-    </div>  
+            {{audience}}
+    </div>
+    {{/ audience }}
 
-      
     </div>
     <div class="event-card--register" data-match-height="event-card--register">
-      
+
       <a class="event-card--button event-card--registration-button" href="{{url}}">Register</a>
       <a class="event-card--button event-card--add-to-cal-button" href="#">Add To Calendar</a>
-      
+
     </div>
   </div>
-</div>
