--- a/source/src_scss/molecules/media/_screenshots.scss
+++ b/source/src_scss/molecules/media/_screenshots.scss
@@ -2,6 +2,7 @@
     position: relative;
     overflow: hidden;
     max-width: 600px; height: auto;
+    margin-bottom: 2em;
 }
 
 .screenshot--image {
