Updates to Orientatio 2016 guide.

--- a/source/_patterns/02-organisms/footers/far-beyond-footer.mustache
+++ b/source/_patterns/02-organisms/footers/far-beyond-footer.mustache
@@ -8,11 +8,11 @@
     </div>
 </section>
 
-<footer class="sbu-footer">
-<nav class="more-nav-v3 clearfix">
+<footer class="farBeyondFooter">
+<nav class="farBeyondFooter-nav clearfix">
         <div class="container"> <!-- Using bootstrap .container class for consistency -->
-            <div class="more-nav-v3-wrapper">
-                <div class="more-nav-v3-col">
+            <div class="farBeyondFooter-nav-wrapper">
+                <div class="farBeyondFooter-nav-col">
                     <strong>Main Nav</strong>
                     <ul class="border-box clearfix">
                         <li class="clearfix">
@@ -41,7 +41,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="more-nav-v3-col">
+                <div class="farBeyondFooter-nav-col">
                     <strong>Info For</strong>
                     <ul class="border-box clearfix">
                         <li class="clearfix">
@@ -73,7 +73,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="more-nav-v3-col">
+                <div class="farBeyondFooter-nav-col">
                     <strong>Find</strong>
                     <ul class="border-box clearfix">
                         <li class="clearfix">
@@ -105,7 +105,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="more-nav-v3-col">
+                <div class="farBeyondFooter-nav-col">
                     <strong>Shortcuts</strong>
                     <ul class="border-box clearfix">
                         <li class="clearfix">
@@ -151,8 +151,8 @@
              </div>
         </div>
     </nav>
-    <div class="footer-container clearfix">
-                    <footer class="footer-bar">
+    <div class="farBeyondFooter-bar-container clearfix">
+                    <footer class="farBeyondFooter-bar">
                         <nav class="wrapper">
                             <span><span id="directedit" class="copyright">©</span> 2016 Stony Brook University</span> | <span>Stony Brook, NY 11794</span> | <span class="last">(631) 632-6000</span>
                             <div class="clearfix policy-links">
