--- a/source/src_scss/organisms/_organisms-base.scss
+++ b/source/src_scss/organisms/_organisms-base.scss
@@ -8,7 +8,7 @@
 @import "galleries/gallery";
 
 @import "footers/footer";
-//@import "footers/far-beyond-footer";
+@import "footers/far-beyond-footer";
 @import "footers/top-footer";
 @import "footers/bottom-footer";
 @import "footers/shield-footer";
