Refactored the new event-button to farbeyond-event-button added support for background-image-card sections refactored image gallery modal to follow BEM removed/excluded unused sass files and templates moved unknown items to homeless folder

--- a/core/templates/viewall.mustache
+++ b/core/templates/viewall.mustache
@@ -18,7 +18,7 @@
                             <script type="text/javascript">
                             var partialName = "{{ patternPartial }}";
                             console.log(partialName);
-                            if(partialName.startsWith("atom") || partialName.startsWith("molecule") || parialName.startsWith("organism"))
+                            if(partialName.startsWith("atom") || partialName.startsWith("molecule") || (partialName.startsWith("organism") && partialName.indexOf("section") < 0))
                             {
                                 $(".{{ patternPartial }}.partial-wrap").wrap("<div class='container'><div class='row'><div class='col-sm-12'></div></div></div>");
                             }
