--- a/source/src_scss/molecules/_molecules-base.scss
+++ b/source/src_scss/molecules/_molecules-base.scss
@@ -3,11 +3,13 @@
 @import "buttons/rounded-image-button";
 @import "buttons/promo-box-button";
 @import "buttons/bold-moves-button";
+@import "buttons/farbeyond-event-button";
 
 @import "cards/cards-base";
 
 //@import "cards/boldMoves-news-card";
 @import "cards/box-card";
+@import "cards/background-image-card";
 @import "cards/drop-accordion-card";
 @import "cards/classic-blurb-card";
 @import "cards/simple-blurb-card";
