--- a/source/_patterns/02-organisms/galleries/gallery.mustache
+++ b/source/_patterns/02-organisms/galleries/gallery.mustache
@@ -6,13 +6,14 @@
             </li>
             {{/ listItems.twelve }}
           </ul>
-        </div>
 
- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+
+ <div class="image-gallery--modal fade modal" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
-        <div class="modal-content">         
-          <div class="modal-body">                
+        <div class="modal-content">
+          <div class="modal-body">
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
+</div>
