--- a/source/src_scss/organisms/_organisms-base.scss
+++ b/source/src_scss/organisms/_organisms-base.scss
@@ -1,19 +1,21 @@
+@import "global/header";
 
-@import "accordions/drop-accordion";
+@import "global/footer";
+//@import "footers/far-beyond-footer";
+@import "global/top-footer";
+@import "global/bottom-footer";
+@import "global/shield-footer";
 
-@import "alerts/alert";
+
+
+@import "alerts/alert-box";
 
 @import "carousels/carousel";
 
 @import "galleries/gallery";
 
-@import "footers/footer";
-//@import "footers/far-beyond-footer";
-@import "footers/top-footer";
-@import "footers/bottom-footer";
-@import "footers/shield-footer";
 
-@import "headers/header";
+
 
 @import "heros/hero-base.scss";
 @import "heros/hero-classic";
@@ -24,55 +26,7 @@
 @import "heros/seawolfStrip";
 @import "heros/video-hero";
 
-@import "news/simple-news-summary";
-@import "news/wide-featured-news";
-@import "news/view-featured-news";
-@import "news/view-additional-news";
 
-@import "sections/section";
-@import "sections/side-image";
-@import "sections/background-image-section";
-
-@import "text/title-link-boxes";
-@import "text/star-title";
-@import "text/text-reveal";
 
 @import "timelines/vertical-timeline";
 @import "timelines/horizontal-timeline";
-
-@import "accordions/drop-accordion";
-
-@import "alerts/alert";
-
-@import "carousels/carousel";
-
-@import "galleries/gallery";
-
-
-
-@import "headers/header";
-
-@import "heros/hero-base.scss";
-@import "heros/hero-classic";
-@import "heros/hero-article";
-@import "heros/hero-contact-card";
-@import "heros/hero-event";
-@import "heros/hero-modern";
-@import "heros/hero-video";
-
-@import "news/simple-news-summary";
-@import "news/wide-featured-news";
-@import "news/view-featured-news";
-@import "news/view-additional-news";
-
-@import "sections/section";
-@import "sections/side-image";
-@import "sections/background-image-section";
-
-@import "tabs/arrow-tabs";
-
-@import "text/title-link-boxes";
-@import "text/star-title";
-@import "text/text-reveal";
-
-@import "timelines/vertical-timeline";
