--- a/source/src_scss/organisms/galleries/_gallery.scss
+++ b/source/src_scss/organisms/galleries/_gallery.scss
@@ -1,27 +1,4 @@
-.pane-node-field-gallery
-{
-
-
-	.field-name-field-gallery 
-	{
-		float: left;
-		margin: 1em;
-	}
-
-	.field-name-field-gallery:first-child
-	{
-		margin-left: 0;
-	}
-}
-
-
-
-.image-gallery-section
-{
-	img
-	{
-		width: 100%;
-		height: auto;
-	}
-
+.image-gallery--modal .modal-dialog {
+    width: 700px;
+    max-width: 700px;
 }
