Refactored hero's to be more reusable / modular.

--- a/source/_patterns/02-organisms/alerts/alert.mustache
+++ b/source/_patterns/02-organisms/alerts/alert.mustache
@@ -4,7 +4,7 @@
 {{^ alert.class}}
 <div class="alert-box__notification">
 {{/ alert.class}}
-	<h2 class="alert-box--heading"><span class="sbuicon-info2"></span>{{headline.medium}}</h2>
+	<h2 class="alert-box--heading"><span class="{{icon}}"></span>{{headline.medium}}</h2>
 	<div class="alert-box--summary">
 	       {{excerpt.short}}
 	</div>
