--- a/source/src_scss/organisms/_organisms-base.scss
+++ b/source/src_scss/organisms/_organisms-base.scss
@@ -19,7 +19,8 @@
 
 @import "heros/hero-base.scss";
 @import "heros/hero-classic";
-@import "heros/hero-article";
+@import "heros/hero-fiddy";
+@import "heros/hero-bottom-fade";
 @import "heros/hero-contact-card";
 @import "heros/hero-event";
 @import "heros/hero-modern";
