--- a/source/src_scss/organisms/alerts/_alert-box.scss
+++ b/source/src_scss/organisms/alerts/_alert-box.scss
@@ -5,13 +5,13 @@
 }
 
 .alert-box__emergency {
-    @extend .alert;
+    @extend .alert-box;
     background-color: #660000;
     padding: 2em;
 }
 
 .alert-box__notification {
-    @extend .alert;
+    @extend .alert-box;
     background-color: #000033;
     padding: 2em;
 }
