--- a/source/src_scss/organisms/heros/_hero-classic.scss
+++ b/source/src_scss/organisms/heros/_hero-classic.scss
@@ -8,11 +8,9 @@
     box-sizing: border-box;
     display: block;
     font-size: 18px;
-    color: #303030;
+    color: #fff;
     overflow-x: hidden;
     overflow-y: hidden;
-    padding-bottom: 0;
-    padding-top: 0;
     position: relative;
     width: 100%;
 }
@@ -21,49 +19,30 @@
     color: #fff;
     margin-top: 0;
 }
-/*
-.hero-classic--content-wrap {
-    width: 100%;
-    padding-top: 1em;
-    padding-bottom: 1em;
-    @include breakpoint($break-tablet) {
-        display: block;
-        position: absolute;
-        width: 100%;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        margin: auto;
-    }
+
+.hero-classic--navigation {
+  margin: 1em 0;
 }
 
-.hero-classic--context-text {
-    .hero-content-text {
-        color: #fff;
-        width: 100%;
-        max-width: 1200px;
-        margin: 0 auto;
-        padding: 0 1em;
-    }
+.hero-classic--buttons {
+  margin: 1em 0;
 }
 
-.hero-classic--content-heading {
-    font-size: 2.5em;
-    color: #fff;
-    text-shadow: 2px 2px 5px #000000;
-    text-transform: uppercase;
-    font-weight: 400;
-    margin-top: 0;
-    @include breakpoint($break2) {
-        font-size: 4em;
-        text-shadow: 2px 2px 5px #000000;
-        margin-top: 0;
-        color: #fff;
-        margin-top: 0.67em;
-    }
+.hero-classic--navigation a{
+  margin: 0.5em 0;
 }
 
-.hero-classic--buttons-wrap {
-    max-width: 800px;
-}*/
+.hero-classic--content {
+  margin: 1em 0;
+}
+
+.hero-classic--text a {
+  color: $gray;
+  border-bottom: 1px $gray dashed;
+}
+
+.hero-classic--text a:hover
+{
+  color: #fff;
+  border-bottom: 1px #fff solid;
+}
